wrap was corrected

--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -7,7 +7,7 @@
 
   }
 
-  &__li {
+  &__item {
     margin-right: 20px;
 
     &:last-child {
