--- a/src/styles/blocks/product__card.scss
+++ b/src/styles/blocks/product__card.scss
@@ -53,7 +53,6 @@
       font-size: 12px;
       font-weight: 400;
       color: $grey-color;
-
     }
 
     &-how-much {
@@ -74,7 +73,6 @@
     line-height: 16px;
     border: 1px solid transparent;
     transition: color 0.3s, background-color 0.3s, border-color 0.3s;
-
     text-transform: uppercase;
     background: $base-color;
     border-radius: 5px;
@@ -84,7 +82,6 @@
       color: $base-color;
       border-radius: 5px;
       background-color: $light-color;
-      transition: 0.4s;
     }
   }
 }
