--- a/src/styles/blocks/stars.scss
+++ b/src/styles/blocks/stars.scss
@@ -14,7 +14,10 @@
     }
   }
 
-  &--4 .stars__star:nth-child(-n+4) {
-    background-image: url(../images/star-active.svg);
+  @for $numberOfStars from 1 to 5 {
+    &--#{$numberOfStars} >
+    &__star:nth-child(-n+#{$numberOfStars}) {
+      background-image: url("/images/star-active.svg");
+    }
   }
 }
