--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,6 +8,7 @@
 
 .main__catalog {
   padding-top: 50px;
-  max-width: $max-width-main;
+  width: $max-width-main;
   margin: auto;
+  padding: 0 50px;
 }
