--- a/src/styles/untils/_normalize.scss
+++ b/src/styles/untils/_normalize.scss
@@ -1,17 +1,13 @@
-* {
-  margin: 0;
-}
-
 h2,
-h1,
 p {
-  padding: 0;
   margin: 0;
+  padding: 0;
   font-size: inherit;
   font-family: inherit;
 }
 
 body {
+  margin: 0;
   box-sizing: border-box;
   font-family: Roboto, sans-serif;
 }
